apps/prod/microk8s/www.connectopia.social/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-redirect
  annotations:
    nginx.ingress.kubernetes.io/permanent-redirect: "https://www.connectopia.social"
spec:
  rules:
  - host: connectopia.social
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-topia
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  # ingressClassName: nginx
  tls:
  - hosts:
    - www.connectopia.social
    - docs.connectopia.social
    secretName: https-secret
  rules:
  - host: "www.connectopia.social"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend
            port:
              number: 80
      - pathType: Prefix
        path: "/api/"
        backend:
          service:
            name: api
            port:
              number: 80
  - host: "docs.connectopia.social"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: docs
            port:
              number: 80
